[gd_scene load_steps=16 format=3 uid="uid://cdin3l2wgvyy2"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_yl3ns"]
[ext_resource type="PackedScene" uid="uid://dkjmj4l3da4jw" path="res://Scenes/quit_window.tscn" id="2_1rl7i"]
[ext_resource type="Texture2D" uid="uid://bhyfp34drb2ob" path="res://textures/table/table-metal.png" id="3_8n08k"]
[ext_resource type="Texture2D" uid="uid://fp3jtuskfvl6" path="res://textures/table/table-metal-emit.png" id="4_2tnd5"]
[ext_resource type="Texture2D" path="res://textures/table/table-metal-normal.png" id="5_0gx3u"]
[ext_resource type="Texture2D" uid="uid://cpybkn8fjepno" path="res://textures/table/table-metal-roughness.png" id="6_pvg1h"]

[sub_resource type="Gradient" id="Gradient_qdaq2"]
colors = PackedColorArray(0.0980392, 0.117647, 0.215686, 1, 0.0980392, 0.215686, 0.294118, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_curnm"]
gradient = SubResource("Gradient_qdaq2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_75xmn"]
texture = SubResource("GradientTexture1D_curnm")
axis_stretch_vertical = 1

[sub_resource type="Gradient" id="Gradient_pih44"]
colors = PackedColorArray(0.0588235, 0.0392157, 0.176471, 1, 0.0588235, 0.176471, 0.215686, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_oppnb"]
gradient = SubResource("Gradient_pih44")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ov4km"]
texture = SubResource("GradientTexture1D_oppnb")
axis_stretch_vertical = 1

[sub_resource type="Theme" id="Theme_pt1af"]
Button/styles/hover = SubResource("StyleBoxTexture_75xmn")
Button/styles/normal = SubResource("StyleBoxTexture_ov4km")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qjwj7"]
resource_name = "Material.001"
albedo_texture = ExtResource("3_8n08k")
metallic = 1.0
metallic_specular = 1.0
metallic_texture = ExtResource("4_2tnd5")
roughness_texture = ExtResource("6_pvg1h")
normal_texture = ExtResource("5_0gx3u")

[sub_resource type="ArrayMesh" id="ArrayMesh_po1q8"]
_surfaces = [{
"aabb": AABB(-0.26366, -0.178194, -0.152994, 0.52732, 0.284429, 0.305998),
"attribute_data": PackedByteArray(0, 0, 23, 114, 88, 82, 23, 114, 0, 0, 255, 255, 88, 82, 255, 255, 167, 160, 11, 121, 97, 86, 11, 121, 176, 164, 23, 114, 88, 82, 23, 114, 97, 86, 10, 249, 167, 160, 10, 249, 88, 82, 255, 255, 176, 164, 255, 255, 119, 247, 255, 127, 119, 247, 255, 255, 49, 173, 255, 127, 49, 173, 255, 255, 0, 0, 23, 114, 0, 0, 241, 48, 177, 12, 23, 114, 177, 12, 241, 48, 177, 12, 23, 114, 177, 12, 241, 48, 98, 25, 23, 114, 98, 25, 241, 48, 98, 25, 23, 114, 98, 25, 241, 48, 19, 38, 23, 114, 19, 38, 241, 48, 19, 38, 23, 114, 19, 38, 241, 48, 196, 50, 23, 114, 196, 50, 241, 48, 188, 201, 8, 41, 188, 201, 185, 53, 11, 189, 8, 41, 11, 189, 185, 53, 177, 12, 64, 36, 177, 12, 241, 48, 0, 0, 64, 36, 0, 0, 241, 48, 196, 50, 23, 114, 196, 50, 241, 48, 117, 63, 23, 114, 117, 63, 241, 48, 76, 152, 23, 114, 76, 152, 241, 48, 253, 164, 23, 114, 253, 164, 241, 48, 117, 63, 23, 114, 117, 63, 241, 48, 38, 76, 23, 114, 38, 76, 241, 48, 189, 203, 255, 127, 189, 203, 217, 62, 110, 216, 255, 127, 110, 216, 217, 62, 98, 25, 64, 36, 19, 38, 64, 36, 98, 25, 241, 48, 19, 38, 241, 48, 19, 38, 64, 36, 196, 50, 64, 36, 19, 38, 241, 48, 196, 50, 241, 48, 38, 76, 23, 114, 38, 76, 241, 48, 215, 88, 23, 114, 215, 88, 241, 48, 110, 216, 255, 127, 110, 216, 217, 62, 31, 229, 255, 127, 31, 229, 217, 62, 215, 88, 23, 114, 215, 88, 241, 48, 136, 101, 23, 114, 136, 101, 241, 48, 31, 229, 255, 127, 31, 229, 217, 62, 208, 241, 255, 127, 208, 241, 217, 62, 196, 50, 64, 36, 117, 63, 64, 36, 196, 50, 241, 48, 117, 63, 241, 48, 117, 63, 64, 36, 38, 76, 64, 36, 117, 63, 241, 48, 38, 76, 241, 48, 136, 101, 23, 114, 136, 101, 241, 48, 57, 114, 23, 114, 57, 114, 241, 48, 57, 114, 23, 114, 57, 114, 241, 48, 234, 126, 23, 114, 234, 126, 241, 48, 234, 126, 23, 114, 234, 126, 241, 48, 155, 139, 23, 114, 155, 139, 241, 48, 155, 139, 23, 114, 155, 139, 241, 48, 76, 152, 23, 114, 76, 152, 241, 48, 98, 25, 64, 36, 98, 25, 241, 48, 177, 12, 64, 36, 177, 12, 241, 48, 109, 214, 8, 41, 109, 214, 185, 53, 188, 201, 8, 41, 188, 201, 185, 53, 119, 247, 255, 127, 208, 254, 255, 127, 119, 247, 255, 255, 208, 254, 255, 255, 11, 189, 185, 53, 100, 196, 185, 53, 11, 189, 255, 127, 100, 196, 255, 127, 49, 173, 0, 0, 138, 180, 0, 0, 49, 173, 255, 127, 138, 180, 255, 127, 100, 196, 185, 53, 189, 203, 185, 53, 100, 196, 255, 127, 189, 203, 255, 127, 138, 180, 167, 45, 202, 184, 167, 45, 138, 180, 255, 127, 202, 184, 255, 127, 176, 164, 23, 114, 240, 168, 23, 114, 176, 164, 255, 255, 240, 168, 255, 255, 202, 184, 167, 45, 11, 189, 167, 45, 202, 184, 255, 127, 11, 189, 255, 127, 240, 168, 23, 114, 49, 173, 23, 114, 240, 168, 255, 255, 49, 173, 255, 255, 167, 160, 10, 249, 167, 160, 11, 121, 176, 164, 255, 255, 176, 164, 23, 114, 97, 86, 11, 121, 97, 86, 10, 249, 88, 82, 23, 114, 88, 82, 255, 255),
"format": 34896613399,
"index_count": 228,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 2, 0, 1, 0, 3, 0, 4, 0, 5, 0, 6, 0, 6, 0, 5, 0, 7, 0, 8, 0, 9, 0, 10, 0, 10, 0, 9, 0, 11, 0, 12, 0, 13, 0, 14, 0, 14, 0, 13, 0, 15, 0, 16, 0, 17, 0, 18, 0, 18, 0, 17, 0, 19, 0, 20, 0, 21, 0, 22, 0, 22, 0, 21, 0, 23, 0, 24, 0, 25, 0, 26, 0, 26, 0, 25, 0, 27, 0, 28, 0, 29, 0, 30, 0, 30, 0, 29, 0, 31, 0, 32, 0, 33, 0, 34, 0, 34, 0, 33, 0, 35, 0, 36, 0, 37, 0, 38, 0, 38, 0, 37, 0, 39, 0, 40, 0, 41, 0, 42, 0, 42, 0, 41, 0, 43, 0, 44, 0, 45, 0, 46, 0, 46, 0, 45, 0, 47, 0, 48, 0, 49, 0, 50, 0, 50, 0, 49, 0, 51, 0, 52, 0, 53, 0, 54, 0, 54, 0, 53, 0, 55, 0, 56, 0, 57, 0, 58, 0, 58, 0, 57, 0, 59, 0, 60, 0, 61, 0, 62, 0, 62, 0, 61, 0, 63, 0, 64, 0, 65, 0, 66, 0, 66, 0, 65, 0, 67, 0, 68, 0, 69, 0, 70, 0, 70, 0, 69, 0, 71, 0, 72, 0, 73, 0, 74, 0, 74, 0, 73, 0, 75, 0, 76, 0, 77, 0, 78, 0, 78, 0, 77, 0, 79, 0, 80, 0, 81, 0, 82, 0, 82, 0, 81, 0, 83, 0, 84, 0, 85, 0, 86, 0, 86, 0, 85, 0, 87, 0, 88, 0, 89, 0, 90, 0, 90, 0, 89, 0, 91, 0, 92, 0, 93, 0, 94, 0, 94, 0, 93, 0, 95, 0, 96, 0, 97, 0, 98, 0, 98, 0, 97, 0, 99, 0, 100, 0, 101, 0, 102, 0, 102, 0, 101, 0, 103, 0, 104, 0, 105, 0, 106, 0, 106, 0, 105, 0, 107, 0, 108, 0, 109, 0, 110, 0, 110, 0, 109, 0, 111, 0, 112, 0, 113, 0, 114, 0, 114, 0, 113, 0, 115, 0, 116, 0, 117, 0, 118, 0, 118, 0, 117, 0, 119, 0, 120, 0, 121, 0, 122, 0, 122, 0, 121, 0, 123, 0, 124, 0, 125, 0, 126, 0, 126, 0, 125, 0, 127, 0, 128, 0, 129, 0, 130, 0, 130, 0, 129, 0, 131, 0, 132, 0, 133, 0, 134, 0, 134, 0, 133, 0, 135, 0, 136, 0, 137, 0, 138, 0, 138, 0, 137, 0, 139, 0, 140, 0, 141, 0, 142, 0, 142, 0, 141, 0, 143, 0, 144, 0, 145, 0, 146, 0, 146, 0, 145, 0, 147, 0, 148, 0, 149, 0, 150, 0, 150, 0, 149, 0, 151, 0),
"material": SubResource("StandardMaterial3D_qjwj7"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 152,
"vertex_data": PackedByteArray(0, 0, 252, 255, 252, 255, 84, 213, 0, 0, 252, 255, 0, 0, 84, 213, 255, 255, 252, 255, 252, 255, 84, 213, 255, 255, 252, 255, 0, 0, 84, 213, 115, 243, 117, 242, 139, 12, 10, 214, 115, 243, 117, 242, 113, 243, 10, 214, 255, 255, 195, 241, 0, 0, 10, 214, 255, 255, 195, 241, 252, 255, 10, 214, 139, 12, 117, 242, 113, 243, 160, 212, 139, 12, 117, 242, 139, 12, 160, 212, 0, 0, 195, 241, 252, 255, 160, 212, 0, 0, 195, 241, 0, 0, 160, 212, 115, 243, 227, 217, 139, 12, 84, 213, 139, 12, 227, 217, 139, 12, 84, 213, 115, 243, 227, 217, 113, 243, 84, 213, 139, 12, 227, 217, 113, 243, 84, 213, 142, 220, 227, 217, 255, 51, 255, 255, 142, 220, 0, 0, 255, 51, 255, 255, 142, 220, 227, 217, 139, 12, 255, 255, 142, 220, 0, 0, 139, 12, 255, 255, 142, 220, 227, 217, 139, 12, 255, 255, 142, 220, 0, 0, 139, 12, 255, 255, 115, 243, 227, 217, 139, 12, 255, 255, 115, 243, 0, 0, 139, 12, 255, 255, 115, 243, 227, 217, 139, 12, 255, 255, 115, 243, 0, 0, 139, 12, 255, 255, 115, 243, 227, 217, 255, 51, 255, 255, 115, 243, 0, 0, 255, 51, 255, 255, 115, 243, 227, 217, 255, 51, 255, 255, 115, 243, 0, 0, 255, 51, 255, 255, 142, 220, 227, 217, 255, 51, 255, 255, 142, 220, 0, 0, 255, 51, 255, 255, 115, 243, 0, 0, 139, 12, 84, 213, 142, 220, 0, 0, 139, 12, 84, 213, 115, 243, 0, 0, 255, 51, 84, 213, 142, 220, 0, 0, 255, 51, 84, 213, 142, 220, 227, 217, 139, 12, 84, 213, 115, 243, 227, 217, 139, 12, 84, 213, 142, 220, 227, 217, 255, 51, 84, 213, 115, 243, 227, 217, 255, 51, 84, 213, 139, 12, 227, 217, 255, 51, 255, 255, 139, 12, 0, 0, 255, 51, 255, 255, 139, 12, 227, 217, 139, 12, 255, 255, 139, 12, 0, 0, 139, 12, 255, 255, 139, 12, 227, 217, 139, 12, 255, 255, 139, 12, 0, 0, 139, 12, 255, 255, 112, 35, 227, 217, 139, 12, 255, 255, 112, 35, 0, 0, 139, 12, 255, 255, 112, 35, 227, 217, 139, 12, 255, 255, 112, 35, 0, 0, 139, 12, 255, 255, 112, 35, 227, 217, 255, 51, 255, 255, 112, 35, 0, 0, 255, 51, 255, 255, 112, 35, 227, 217, 255, 51, 255, 255, 112, 35, 0, 0, 255, 51, 255, 255, 139, 12, 227, 217, 255, 51, 255, 255, 139, 12, 0, 0, 255, 51, 255, 255, 112, 35, 0, 0, 139, 12, 255, 255, 139, 12, 0, 0, 139, 12, 255, 255, 112, 35, 0, 0, 255, 51, 255, 255, 139, 12, 0, 0, 255, 51, 255, 255, 139, 12, 227, 217, 139, 12, 255, 191, 112, 35, 227, 217, 139, 12, 255, 191, 139, 12, 227, 217, 255, 51, 255, 191, 112, 35, 227, 217, 255, 51, 255, 191, 139, 12, 227, 217, 113, 243, 255, 255, 139, 12, 0, 0, 113, 243, 255, 255, 139, 12, 227, 217, 253, 203, 255, 255, 139, 12, 0, 0, 253, 203, 255, 255, 139, 12, 227, 217, 253, 203, 255, 255, 139, 12, 0, 0, 253, 203, 255, 255, 112, 35, 227, 217, 253, 203, 255, 255, 112, 35, 0, 0, 253, 203, 255, 255, 112, 35, 227, 217, 253, 203, 255, 255, 112, 35, 0, 0, 253, 203, 255, 255, 112, 35, 227, 217, 113, 243, 255, 255, 112, 35, 0, 0, 113, 243, 255, 255, 112, 35, 227, 217, 113, 243, 255, 255, 112, 35, 0, 0, 113, 243, 255, 255, 139, 12, 227, 217, 113, 243, 255, 255, 139, 12, 0, 0, 113, 243, 255, 255, 112, 35, 0, 0, 253, 203, 255, 255, 139, 12, 0, 0, 253, 203, 255, 255, 112, 35, 0, 0, 113, 243, 255, 255, 139, 12, 0, 0, 113, 243, 255, 255, 139, 12, 227, 217, 253, 203, 255, 191, 112, 35, 227, 217, 253, 203, 255, 191, 139, 12, 227, 217, 113, 243, 255, 191, 112, 35, 227, 217, 113, 243, 255, 191, 142, 220, 227, 217, 113, 243, 255, 255, 142, 220, 0, 0, 113, 243, 255, 255, 142, 220, 227, 217, 253, 203, 255, 255, 142, 220, 0, 0, 253, 203, 255, 255, 142, 220, 227, 217, 253, 203, 255, 255, 142, 220, 0, 0, 253, 203, 255, 255, 115, 243, 227, 217, 253, 203, 255, 255, 115, 243, 0, 0, 253, 203, 255, 255, 115, 243, 227, 217, 253, 203, 255, 255, 115, 243, 0, 0, 253, 203, 255, 255, 115, 243, 227, 217, 113, 243, 255, 255, 115, 243, 0, 0, 113, 243, 255, 255, 115, 243, 227, 217, 113, 243, 255, 255, 115, 243, 0, 0, 113, 243, 255, 255, 142, 220, 227, 217, 113, 243, 255, 255, 142, 220, 0, 0, 113, 243, 255, 255, 115, 243, 0, 0, 253, 203, 84, 213, 142, 220, 0, 0, 253, 203, 84, 213, 115, 243, 0, 0, 113, 243, 84, 213, 142, 220, 0, 0, 113, 243, 84, 213, 142, 220, 227, 217, 253, 203, 84, 213, 115, 243, 227, 217, 253, 203, 84, 213, 142, 220, 227, 217, 113, 243, 84, 213, 115, 243, 227, 217, 113, 243, 84, 213, 115, 243, 117, 242, 113, 243, 255, 191, 115, 243, 227, 217, 113, 243, 255, 191, 139, 12, 117, 242, 113, 243, 255, 191, 139, 12, 227, 217, 113, 243, 255, 191, 115, 243, 117, 242, 139, 12, 84, 213, 115, 243, 227, 217, 139, 12, 84, 213, 115, 243, 117, 242, 113, 243, 84, 213, 115, 243, 227, 217, 113, 243, 84, 213, 139, 12, 117, 242, 139, 12, 255, 255, 139, 12, 227, 217, 139, 12, 255, 255, 115, 243, 117, 242, 139, 12, 255, 255, 115, 243, 227, 217, 139, 12, 255, 255, 139, 12, 117, 242, 113, 243, 84, 213, 139, 12, 227, 217, 113, 243, 84, 213, 139, 12, 117, 242, 139, 12, 84, 213, 139, 12, 227, 217, 139, 12, 84, 213, 0, 0, 252, 255, 252, 255, 84, 213, 0, 0, 195, 241, 252, 255, 84, 213, 0, 0, 252, 255, 0, 0, 84, 213, 0, 0, 195, 241, 0, 0, 84, 213, 0, 0, 252, 255, 0, 0, 255, 255, 0, 0, 195, 241, 0, 0, 255, 255, 255, 255, 252, 255, 0, 0, 255, 255, 255, 255, 195, 241, 0, 0, 255, 255, 255, 255, 252, 255, 0, 0, 84, 213, 255, 255, 195, 241, 0, 0, 84, 213, 255, 255, 252, 255, 252, 255, 84, 213, 255, 255, 195, 241, 252, 255, 84, 213, 255, 255, 252, 255, 252, 255, 255, 191, 255, 255, 195, 241, 252, 255, 255, 191, 0, 0, 252, 255, 252, 255, 255, 191, 0, 0, 195, 241, 252, 255, 255, 191, 139, 12, 117, 242, 139, 12, 32, 212, 115, 243, 117, 242, 139, 12, 32, 212, 0, 0, 195, 241, 0, 0, 32, 212, 255, 255, 195, 241, 0, 0, 32, 212, 115, 243, 117, 242, 113, 243, 142, 214, 139, 12, 117, 242, 113, 243, 141, 214, 255, 255, 195, 241, 252, 255, 142, 214, 0, 0, 195, 241, 252, 255, 141, 214, 84, 213, 170, 42, 84, 213, 170, 42, 84, 213, 170, 42, 84, 213, 170, 42, 232, 84, 46, 86, 232, 84, 46, 86, 232, 84, 46, 86, 232, 84, 46, 86, 194, 85, 121, 84, 194, 85, 121, 84, 194, 85, 121, 84, 194, 85, 121, 84, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 213, 170, 42, 84, 213, 170, 42, 84, 213, 170, 42, 84, 213, 170, 42, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 213, 170, 42, 84, 213, 170, 42, 84, 213, 170, 42, 84, 213, 170, 42, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 170, 170, 84, 85, 170, 170, 84, 85, 170, 170, 84, 85, 170, 170, 84, 85, 255, 63, 255, 191, 255, 63, 255, 191, 255, 63, 255, 191, 255, 63, 255, 191, 84, 85, 170, 170, 84, 85, 170, 170, 84, 85, 170, 170, 84, 85, 170, 170, 84, 85, 170, 170, 84, 85, 170, 170, 84, 85, 170, 170, 84, 85, 170, 170, 255, 63, 255, 191, 255, 63, 255, 191, 255, 63, 255, 191, 255, 63, 255, 191, 170, 170, 84, 85, 170, 170, 84, 85, 170, 170, 84, 85, 170, 170, 84, 85, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 18, 86, 18, 86, 18, 86, 18, 86, 18, 86, 18, 86, 18, 86, 18, 86, 154, 84, 154, 84, 154, 84, 154, 84, 154, 84, 154, 84, 154, 84, 154, 84)
}]

[node name="MainMenu" type="PanelContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_pt1af")
script = ExtResource("1_yl3ns")

[node name="MenuBGContainer" type="SubViewportContainer" parent="."]
layout_mode = 2
stretch = true

[node name="MenuBG" type="SubViewport" parent="MenuBGContainer"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="BGPlaceholder" type="ColorRect" parent="MenuBGContainer/MenuBG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.433026, 0.43763, 0.653163, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Padding" type="ReferenceRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 0
border_color = Color(1, 0, 0, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(320, 420)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 16

[node name="Start" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Options"

[node name="Separation" type="ReferenceRect" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
border_color = Color(1, 0, 0, 0)

[node name="Exit" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Quit"

[node name="Padding2" type="ReferenceRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 0
border_color = Color(1, 0, 0, 0)

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 48
text = "
Foggy Mind"
fit_content = true

[node name="QuitWindow" parent="." instance=ExtResource("2_1rl7i")]
visible = false

[node name="Table" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0976659, 0, 0.890189)
mesh = SubResource("ArrayMesh_po1q8")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="close_requested" from="QuitWindow" to="." method="_on_stay_pressed"]
[connection signal="pressed" from="QuitWindow/VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="QuitWindow/VBoxContainer/HBoxContainer/Stay" to="." method="_on_stay_pressed"]

[editable path="QuitWindow"]
